--- a/app/views/users/registration.html.erb
+++ b/app/views/users/registration.html.erb
@@ -42,6 +42,11 @@
     <%= f.label :phone_number %><br />
     <%= f.telephone_field :phone_number, autofocus: true, autocomplete: "tel" %>
   </div>
+  <div class="field">
+    <%= f.label :seeking_degree %><br />
+    <%= f.telephone_field :checkbox, autofocus: true %>
+  </div>
+
 
   <div class="field">
     <%= f.label :email %><br />
