--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -34,6 +34,9 @@
 						<div class="progress-line">
 						</div>
 						<div class="progress-balls">
+						<a href="/student_application_form/personal_data_step">
+						<span class='progress-ball done-step'></span>
+						</a>
 						<% final_steps_array = sap.completed_steps_array %>
 						<% titles = ["Sending Institution", "Purpose of stay", "Study year", "Language Competence", "Work Experience", "Previous and current studies"] %>
 						<% for i in 1..6 do %>
