--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -44,8 +44,6 @@ html
 					.action-buttons
 						display: block
 						padding: 0
-						//position: absolute
-						//bottom: 0
 						margin-top: 20px
 						width: 100%
 
@@ -58,8 +56,9 @@ html
 					input:not([type=submit]), select
 						border-radius: 0
 						border: 1px solid #333
-						height: 22px
+						height: 25px
 						padding: 5px
+						font-size: 0.9em
 					input[type=checkbox]
 						flex-grow: 0
 					select
