--- a/app/assets/stylesheets/dashboard/admin-dashboard.sass
+++ b/app/assets/stylesheets/dashboard/admin-dashboard.sass
@@ -2,13 +2,14 @@
 @import "_mixins"
 
 .filters
-	background-color: #eee
-	padding: 35px
-	padding-top: 12px
+	background-color: #edf2f6
+	padding: 20px
+	h2
+		margin: 0
 	.flex-filters
 		@include flexBoxVendor
 		flex-wrap: wrap
-
+		align-items: center
 		.filter
 			@include flexBoxVendor
 			flex-wrap: wrap
@@ -23,8 +24,7 @@
 	.collapsible
 		font-size: 14px
 	.nominee-form
-		margin-top: -30px
-		margin-right: -10px
+		display: flex
 		button
 			cursor: pointer
 			i:before
@@ -35,15 +35,12 @@
 		@include flexBoxVendor
 		text-align: left
 		flex-wrap: wrap
-		// justify-content: center
+		flex-direction: column
 		.flex-table-cell
-			// flex-grow: 1
 			text-align: left
-			// border-right: 1px solid #ccc
 			border-top: 1px solid #ccc
 			overflow: hidden
-			padding: 4px
-			padding-left: 4px
+			padding: 10px
 			box-sizing: border-box
 			color: #777
 			.dashboard-icon
@@ -69,21 +66,13 @@
 			border-top: none
 			color: #333
 		.flex-table-email
-			//order: 1
-			width: 23%
-			// flex-grow: 3
+			width: 17%
 		.flex-table-univ
-			//order: 2
 			width: 16%
-			// flex-grow: 3
 		.flex-table-period
-			//order: 3
-			width: 10%
-			// flex-grow: 1
+			width: 16%
 		.flex-table-app-form
 			width: 7%
-			//order: 4
-			// flex-grow: 1
 			a
 				@include flexBoxVendor
 				justify-content: flex-end
@@ -91,29 +80,17 @@
 					margin-left: 2px
 		.flex-table-mot-letter
 			width: 6%
-			// order: 5
-			// flex-grow: 1
 		.flex-table-cv
 			width: 6%
-			//order: 6
-			// flex-grow: 1
 		.flex-table-trans-rec
-			//order: 7
 			width: 6%
-			// flex-grow: 1
 		.flex-table-la
 			width: 6%
-			//order: 8
-			// flex-grow: 1
 		.flex-table-pctg
 			width: 6%
 			font-weight: bold
-			//order: 9
-			// flex-grow: 1
 		.flex-table-status
-			//order: 10
 			width: 12%
-			// flex-grow: 1
 			border-right: none
 		.flex-table-email-nominee
 			width: calc(100% - 120px)
@@ -123,11 +100,7 @@
 			width: 60px			
 		&.nominee-table
 			align-items: stretch
-			// justify-content: space-around
-
 			.flex-table-cell
-				min-height: 60px
-				vertical-align: middle
 				.dashboard-icon
 					text-align: left
 					padding-left: 2%
@@ -136,3 +109,12 @@
 			.flex-table-header
 				min-height: 30px		
 		&.user-table
+
+.nominee-item
+	background-color: #edf2f6
+	display: flex
+.registered-item
+	background-color: white
+	display: flex
+.table-header
+	display: flex
