--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -42,15 +42,17 @@
 	.left-column
 		flex-grow: 1
 		text-align: center
-		padding-right: 15px
 		flex-direction: row
-	
+		margin-right: 10px
 		.picture
 			width: 90px
 			padding: 10px
 			border: 1px solid #333
 			&.tiny
 				width: 50px
+		p
+			max-width: 120px
+			margin: 5px auto
 		.edit-picture
 			position: absolute
 			margin-left: 88px
@@ -58,18 +60,17 @@
 			width: 22px
 			height: 22px
 			padding: 0
-			// border: none
-			border-radius: 5px
+			border-radius: 3px
 			border: 2px solid #4664A2
-			background-color: white
+			background-color: $etsit_blue
 			cursor: pointer
 			i
 				padding: 0
-				color: $etsit_blue 
+				color: white
 				cursor: pointer
 			transition: 0.2s all ease-in
 			&:hover
-				transform: scale(0.9)
+				transform: scale(1.07)
 	.right-column
 		flex-grow: 7
 		.row
@@ -113,18 +114,12 @@
 				.orange
 					color: orange
 			.collapsible
-				// display: none
-				// height: auto
 				max-height: 0
 				transition: max-height 0.2s ease-out
-				//transition: 0.2s opacity step-end
 				overflow: hidden
 				&.show
-					// display: block
 					max-height: 1191px
 					transition: max-height 0.9s ease-in
-					// &.big
-					// 	max-height: 140px
 				.align-right
 					text-align: right
 					@include flexBoxVendor
@@ -149,10 +144,7 @@
 		.right-column .row
 			.collapsible
 				&.show
-					// display: block
-					// height: 111px
 					&.big
-						// height: 300px
 				.align-right
 					flex-direction: column
 					.file-name
