Styles work experience & languages

--- a/app/assets/stylesheets/buttons.sass
+++ b/app/assets/stylesheets/buttons.sass
@@ -59,11 +59,11 @@
 .small-button
     width: 31px 
     height: 31px 
-    border-radius: 5px
-    padding: 3px
+    border-radius: 3px
+    padding: 2px
     background-color: $etsit_blue
     border: 2px solid $etsit_blue
-    i.dark
+    i, i.dark
         color: white !important
 .mdi-help
     cursor: help
