--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -11,6 +11,8 @@ html
 		position: relative
 		height: 100%
 		background-color: #f8f8f8
+		.clear
+			clear: both
 		a
 			color: inherit
 			text-decoration: none
