--- a/app/views/student_application_form/_fourth_step.erb
+++ b/app/views/student_application_form/_fourth_step.erb
@@ -23,7 +23,7 @@
 	<h2 class="block">Other languages</h2>
 	<div class="other-languages" style="display:block; width:100%;">
 	<% unless review %>
-		<button class="custom-button" id="add-lang" type="button">Add a new language</button>
+		<button class="custom-button primary" id="add-lang" type="button">Add a new language</button>
 	<%end%>
 	<div class="lang-list">
 	<% if defined?(@sap.languages) %>
