--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,13 @@
     <%= render "layouts/header" %>
     <div class="container main">
         <%if flash[:error] %>
-        <p class="flash-message notice"><%= flash[:error] %></p>
+            <p class="flash-message error"><%= flash[:error] %></p>
         <%end%>
         <%if notice %>
-        <p class="flash-message notice"><%= notice %></p>
+            <p class="flash-message notice"><%= notice %></p>
         <%end%>
         <%if alert %>
-        <p class="flash-message alert"><%= alert %></p>
+            <p class="flash-message alert"><%= alert %></p>
         <%end%>
 
     <%= yield %>
